helm/applications/config-application/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: config-network-policy
  namespace: config
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: config-application
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: gateway
        - namespaceSelector:
            matchLabels:
              name: fys
        - namespaceSelector:
            matchLabels:
              name: stok
      ports:
        - protocol: TCP
          port: 8888
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - protocol: TCP
          port: 443
